# pronto_anymal_example

./: .gitignore  README.md  dependencies.rosinstall
.github/workflows/: industrial_ci_action.yml
anymal_robcogen/: CMakeLists.txt  package.xml
pronto_anymal/: CMakeLists.txt  package.xml
pronto_anymal/config/: pronto.rviz
pronto_anymal/launch/: pronto_anymal.launch  publish_trajectory.launch
pronto_anymal/scripts/: clone_deps.bash  pose_to_tf.py  publish_csv_as_path.py
pronto_anymal/src/: pronto_anymal_node.cpp
pronto_anymal_b/: package.xml
pronto_anymal_b/scripts/: clone_deps.bash
pronto_anymal_b_commons/include/pronto_anymal_b_commons/: feet_contact_forces.hpp  forward_kinematics.hpp
pronto_anymal_b_commons/src/: feet_contact_forces.cpp  forward_kinematics.cpp
pronto_anymal_commons/: CMakeLists.txt  package.xml
pronto_anymal_commons/include/pronto_anymal_commons/: feet_contact_forces.hpp  feet_jacobians.hpp  forward_kinematics.hpp
pronto_anymal_commons/src/: feet_contact_forces.cpp  feet_jacobians.cpp  forward_kinematics.cpp
